<resources>
    <string name="app_name">ProjectSetup</string>
    <string name="skip"><u>Skip for now</u></string>
    <string name="login">Login</string>
    <string name="welcome">Welcome</string>
    <string name="selectlanguage">Please select your language</string>
    <string name="hithere">Hi there,</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="orloginwith">Or Login with social media</string>
    <string name="donthavean">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="email">Email</string>
    <string name="createaccount">Create Account</string>
    <string name="gender">Gender</string>
    <string name="agreewithterms">I agree with Terms of service and Privacy policy</string>
    <string name="alreadyhaveanaccount">Already have an account?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="fullname">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_agent_lender">Contact Agent/lender</string>
    <string name="jackson_michale">Jackson Michale</string>
    <string name="income">Yan Rupees</string>
    <string name="principal_interest">$1,000</string>
    <string name="welcome_to_pace">Welcome To Pace</string>
    <string name="pace_is_a_real_estate_technology_application">Pace is a real estate technology application.</string>
    <string name="this_is_an_application_that_is_suitable_for_smart">This is an application that is suitable for smart</string>
    <string name="living_through_search_real_state">living through search real state</string>
    <string name="easy_to_use">Easy to use</string>
    <string name="easy_to_rent_get_support_after_renting">Easy to rent, get support after renting</string>
    <string name="and_find_similar_property">and find similar property</string>
    <string name="secure_transparent_and_cost_effective">Secure, transparent and cost-effective</string>
    <string name="secure_and_transparent_information">Secure and transparent information</string>
    <string name="about_the_real_estate_that_you_want_at">about the real estate that you want at</string>
    <string name="cost_effective_rate">cost effective rate</string>
    <string name="skipwelcome">Skip</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="pleaseenter">Please enter your email address so we can</string>
    <string name="sendyou">send you a verification code</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_4digit_code">Enter 4 digit code</string>
    <string name="code_was_sent_your_mobile">The code was sent your mobile number</string>
    <string name="enter_your_code">Please enter your code</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_newpassword">New Password</string>
    <string name="enternew_password">Enter new Password</string>
    <string name="reenternew_password">Reenter new Password</string>
    <string name="password_reset">Password reset</string>
    <string name="successful">successful</string>
    <string name="successfullysent">Your password has been successfully reset</string>
    <string name="entercode">enter code</string>
    <string name="english">English</string>
    <string name="japanese">Japanese</string>
    <string name="hebrew">Hebrew</string>
    <string name="tieng">Tieng Viet</string>
    <string name="russian">Russian</string>
    <string name="spanish">Spanish</string>
    <string name="nepal">Nepal</string>
    <string name="home">Home</string>
    <string name="saved">Saved</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="saved_search">Saved Search</string>
    <string name="all">All</string>
    <string name="for_rent">For Rent</string>
    <string name="for_sale">For Sale</string>
    <string name="account">Account</string>
    <string name="channel_name">Bijay</string>
    <string name="channel_description">Bijay Bastakoti</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="you_haven_t_saved_anything_yet">You haven\'t saved anything yet.</string>
    <string name="start_searching_for_properties_to_add_now">Start searching for properties to add now</string>
    <string name="get_started">Get Started</string>
    <string name="agent_profile">Agent profile</string>
    <string name="ryoko_yonekura">Ryoko Yonekura</string>
    <string name="_20_reviews">20 reviews</string>
    <string name="_5_5">5/5</string>
    <string name="send_message">Send Message</string>
    <string name="make_a_call">Make a call</string>
    <string name="about_me">About me</string>
    <string name="active_listings_2">Active Listings(2)</string>
    <string name="view_more_listings">View more listings</string>
    <string name="i_began_my_professional_career_in_investment">I began my professional career in investment.....</string>
    <string name="ratings_and_review">Ratings and Review</string>
    <string name="you_can_become_an_agent_or_individual_anytime">You can become an agent or individual anytime.</string>
    <string name="usage_type">Usage type</string>
    <string name="individual">Individual</string>
    <string name="register_new_real_estate_agency">Register new real estate agency</string>
    <string name="step_1_2">Step 1/2</string>
    <string name="agent_of_existing_real_estate_agency">Agent of existing real estate agency</string>
    <string name="register_an_agency">Register an agency</string>
    <string name="step_2_2">Step 2 / 2</string>
    <string name="taneri_park">Taneri Park</string>
    <string name="adachi_ku">Adachi-ku</string>
    <string name="municipality">Municipality</string>
    <string name="your_real_estate_agency_have_been_registered_successfully">Your real estate agency have been registered successfully</string>
    <string name="company_name">Company name</string>
    <string name="copy">Copy</string>


    <!-- TODO: Remove or change this placeholder text -->

</resources>
