<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.example.projectsetup.ui.navigation.fragment.account.myProfile.activity.agent.viewModel.AgentOptionsViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:onClick="@{()->viewModel.back()}"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/backarrow1" />

                <TextView
                    android:id="@+id/textView57"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/normal_text_color"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginStart="15dp"
                    android:text="Become an agent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#92000000"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"></LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Select from following options"
                    android:textColor="@color/normal_text_color"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/new_real_estate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/quicksand"
                        android:onClick="@{()->viewModel.newRealEstate()}"
                        android:text="@string/register_new_real_estate_agency"
                        android:textColor="#CD201A16" />

                    <CheckBox
                        android:id="@+id/existing_real_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:onClick="@{()->viewModel.existingRealEstate()}"
                        android:text="@string/agent_of_existing_real_estate_agency"
                        android:fontFamily="@font/quicksand"
                        android:textColor="#CB201A16" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentBottom="true"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:text="@string/next"
            android:background="@drawable/forgot_layout"/>
    </RelativeLayout>
</layout>
