<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.projectsetup.ui.navigation.fragment.account.myProfile.activity.agent.viewModel.RegisterAgencySuccessViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:onClick="@{()->viewModel.back()}"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView26"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/backarrow1" />

                <TextView
                    android:id="@+id/textView57"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:text="@string/register_an_agency" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#92000000"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView64"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_bold"
                    android:textSize="15sp"
                    android:textColor="@color/normal_text_color"
                    android:text="@string/your_real_estate_agency_have_been_registered_successfully" />

                <TextView
                    android:id="@+id/textView66"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/normal_text_color"
                    android:fontFamily="@font/quicksand_bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/company_name" />

                <TextView
                    android:id="@+id/textView67"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand"
                    android:textSize="15sp"
                    android:text= "B Corps and Real estate"/>

                <TextView
                    android:id="@+id/textView68"
                    android:layout_width="match_parent"
                    android:textColor="@color/normal_text_color"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/quicksand_bold"
                    android:text="Corporate number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">




                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_margin="20dp"
                        android:background="@drawable/register_agency_layout"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:padding="10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView69"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textColor="@color/normal_text_color"
                                android:fontFamily="@font/quicksand_bold"
                                android:textSize="17sp"
                                android:text="123456789" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:background="@drawable/copy_layout"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView70"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/white"
                                android:fontFamily="@font/quicksand_bold"
                                android:textSize="17sp"
                                android:text="@string/copy" />
                        </LinearLayout>

                    </LinearLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/textView72"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/normal_text_color"
                android:text="Share via" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView29"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/facebookiconsmall" />

                <ImageView
                    android:id="@+id/imageView34"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/twittersmall" />

                <ImageView
                    android:id="@+id/imageView35"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:src="@drawable/shareicon" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>